--- a/client/src/app/pages/people/people-search/people-search.component.html
+++ b/client/src/app/pages/people/people-search/people-search.component.html
@@ -1,9 +1,9 @@
-<!-- <ng-container *ngIf="isPeopleLoading">
+<ng-container *ngIf="isPeopleLoading">
   <div class="loading">
     <mat-spinner></mat-spinner>
     <h4>Loading...</h4>
   </div>
-</ng-container> -->
+</ng-container>
 <!-- Search Bar -->
 
 <div class="career-main">
@@ -14,7 +14,7 @@
     <div class="people-search-header">
       <mat-form-field appearance="standard" class="search">
         <mat-icon matSuffix (click)="onSearchUser($event)">search</mat-icon>
-        <input matInput placeholder="Search peoples by name or email" type="text" [matAutocomplete]="autocompleteSearch" formControlName="searchPeople" (keyup.enter)="onSearchPosition($event)">
+        <input matInput placeholder="Search peoples by name or email" type="text" [matAutocomplete]="autocompleteSearch" formControlName="searchPeople" (keyup.enter)="onSearchUser($event)">
         <mat-autocomplete #autocompleteSearch="matAutocomplete">
           <mat-option *ngFor="let people of autocomplete_searchpeoples" [value]="people.first_name + (people.last_name ? ' ' + people.last_name : '')">
             <img [src]="people.photo ? people.photo : 'assets/icons/no_photo.png'">
@@ -114,62 +114,66 @@
 
     <div class="people-list-container">
       <ng-container *ngIf="userList && userList.length > 0">
-        <div *ngFor="let user of userList">
+        <div *ngFor="let user of userList; let i = index;">
           <div class="row">
-            <span>{{user.general_info.first_name + '' + user.general_info.last_name}}</span>
+
+            <div class="header-container">
+              <div class="user-info">
+                <div class="image"><img [src]="user.general_info.photo ? user.general_info.photo : 'assets/icons/no_photo.png'"></div>
+                <div class="info">
+                  <h2 class="name">{{user.general_info.first_name}} {{user.general_info.last_name}}</h2>
+                  <h3 *ngIf="user.general_info.title" class="title">{{user.general_info.title}}</h3>
+                </div>
+              </div>
+              <action-button class="contact-btn" type="flat" title="Add Contact" color="primary"></action-button>
+            </div>
+
+            <div *ngIf="user.general_info.city_id || user.general_info.state_id || (user.educationList && user.educationList.length > 0)" class="sub-container">
+              <div *ngIf="user.general_info.city_id || user.general_info.state_id" class="user-info">
+                <div class="image secondary"><img src="assets/icons/ic_location_1.svg"></div>
+                <div class="info">
+                  <h5 class="secondary-title">Location</h5>
+                  <h4 class="secondary-title">{{user.general_info.city}}<br *ngIf="user.general_info.city && user.general_info.state">{{user.general_info.state}}</h4>
+                </div>
+              </div>
+              <div class="user-info" *ngFor="let education of user.educationList">
+                <div class="image secondary"><img src="assets/icons/ic_university.svg"></div>
+                <div class="info">
+                  <h5 class="secondary-title">{{education.school_id ? education.school_name : education.user_specified_school_name}}</h5>
+                  <h4 class="secondary-title">{{education.education_level}}<br *ngIf="education.major_name && education.start_date">{{helperService.convertToFormattedString(education.start_date, 'YYYY')}} - {{education.graduation_date ? helperService.convertToFormattedString(education.graduation_date, 'YYYY') : 'Present'}}</h4>
+                </div>
+              </div>
+            </div>
+
+            <div *ngIf="user.skillList && user.skillList.length > 0" class="skills-container">
+              <h5>Skills <span class="count">{{user.skillList.length}}</span></h5>
+              <div class="skills" *ngIf="displayItemsLimit; let limit">
+                <ng-container *ngFor="let skill of user.skillList; let j = index;">
+                  <simple-tag *ngIf="j < limit" type="gray" [title]="skill.skill" ellipseTag="true" [value]="skill.skill_level"></simple-tag>
+                </ng-container>
+                <img *ngIf="limit > displayItemsLimit" (click)="limit = limit - displayItemsLimit" src="assets/icons/ic_see_less.svg" alt="See Less">
+                <img *ngIf="limit < user.skillList.length" (click)="limit = limit + displayItemsLimit" src="assets/icons/ic_see_more.svg" alt="See More">
+              </div>
+            </div>
+
+            <div *ngIf="user.educationList && user.educationList.length > 0" class="skills-container">
+              <h5>Major <span class="count">{{user.educationList.length}}</span></h5>
+              <div class="skills" *ngIf="displayItemsLimit; let limit">
+                <ng-container *ngFor="let education of user.educationList; let j = index;">
+                  <simple-tag *ngIf="j < limit" type="gray" [title]="education.major_name"></simple-tag>
+                </ng-container>
+                <img *ngIf="limit > displayItemsLimit" (click)="limit = limit - displayItemsLimit" src="assets/icons/ic_see_less.svg" alt="See Less">
+                <img *ngIf="limit < user.educationList.length" (click)="limit = limit + displayItemsLimit" src="assets/icons/ic_see_more.svg" alt="See More">
+              </div>
+            </div>
+
           </div>
         </div>
       </ng-container>
 
       <div *ngIf="!userList || (userList && userList.length === 0)">
-        <!-- <div class="row no-people">
+        <div class="row no-people">
           No search results found.
-        </div> -->
-        <div class="row">
-          <div class="header-container">
-            <div class="user-info">
-              <div class="image"><img src="assets/icons/no_photo.png"></div>
-              <div class="info">
-                <h2 class="name">Jack Richard</h2>
-                <h3 class="title">Sr. Software Engineer</h3>
-              </div>
-            </div>
-            <action-button class="contact-btn" type="flat" title="Add Contact" color="primary"></action-button>
-          </div>
-          <div class="sub-container">
-            <div class="user-info">
-              <div class="image secondary"><img src="assets/icons/ic_location_1.svg"></div>
-              <div class="info">
-                <h5 class="secondary-title">Location</h5>
-                <h4 class="secondary-title">San Francisco<br>California</h4>
-              </div>
-            </div>
-            <div class="user-info">
-              <div class="image secondary"><img src="assets/icons/ic_university.svg"></div>
-              <div class="info">
-                <h5 class="secondary-title">Brown University</h5>
-                <h4 class="secondary-title">Bachelor’s of Science<br>2015 - 2018</h4>
-              </div>
-            </div>
-          </div>
-          <div class="skills-container">
-            <h5>Skills <span class="count">8</span></h5>
-            <div class="skills">
-              <simple-tag type="gray" title="Motion Design" ellipseTag="true" value="6"></simple-tag>
-              <simple-tag type="gray" title="Motion Design" ellipseTag="true" value="6"></simple-tag>
-              <simple-tag type="gray" title="Motion Design" ellipseTag="true" value="6"></simple-tag>
-              <img src="assets/icons/ic_see_less.svg" alt="See Less">
-            </div>
-          </div>
-          <div class="skills-container">
-            <h5>Major <span class="count">8</span></h5>
-            <div class="skills">
-              <simple-tag type="gray" title="Motion Design"></simple-tag>
-              <simple-tag type="gray" title="Motion Design"></simple-tag>
-              <simple-tag type="gray" title="Motion Design"></simple-tag>
-              <img src="assets/icons/ic_see_less.svg" alt="See Less">
-            </div>
-          </div>
         </div>
       </div>
 
